homeworks/avramenko/module-3/lesson-8/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rd
  name: lesson-8
spec:
  selector:
    app: lesson-8
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
