homeworks/avramenko/module-3/lesson-8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lesson-8
  namespace: rd
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - course-app.local
      secretName: lesson-8-tls
  rules:
    - host: course-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lesson-8
                port:
                  number: 80
